samples/_failures_safe/1761257168_3518f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee02d90e.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_ee02d90e.c:123:9: error: expected expression at end of input
  123 |         if (
      |         ^~
./samples/SAFE/__tmp_ee02d90e.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee02d90e.c:123:9: error: expected declaration or statement at end of input
